# pyblnet

./: .gitignore  .project  .travis.yml  LICENSE  Pipfile  README.md  README.rst  example.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  release.yml
PyBLNET.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyblnet/: __init__.py  blnet.py  blnet_conn.py  blnet_parser.py  blnet_web.py
pyblnet/tests/: blnet_mock_server.py  server_control.py  test.py  test_parser.py  test_web.py
pyblnet/tests/test_structure/: .error.html  580500.alt2.htm  580500.alternative.htm  580500.htm  580600.htm  blnet_mock_server.py  main.htm  par.htm  server_control.py
pyblnet/tests/web_raw/: 580600.htm  digital_values  log_in  web_state.py
tests/: test_parser.py  test_web.py
tests/test_structure/: blnet_mock_server.py
tests/web_raw/: analog_values  logged_in  main_alt_one
