[ build-system ]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[ project ]
name = "PyBLNET"
version = "0.10.0"
description = "Automate wireless communication to UVR1611 via BL-NET"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3"
license = {text = "MIT"}
authors = [
    {name = "nielstron", email = "n.muendler@posteo.de"}
]
homepage = "https://github.com/nielstron/pyblnet/"
keywords = ["python", "uvr1611", "blnet", "technische alternative", "home automation", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Object Brokering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "htmldom",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[ project.urls ]
"Homepage" = "https://github.com/nielstron/pyblnet/"

[ tool.flit.module ]
name = "pyblnet"